The ChangeLog file has been removed. You can get the equivalent information
by doing

	$ cg log

in a checked out GIT tree, or using the gitweb interface currently
available at

	http://pasky.or.cz/gitweb.cgi

(to be moved to a nicer location later).